cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(MY_GRAND_PROJECT)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_write_test pcd_write.cpp)
add_executable (pcl_visualizer_demo pcl_visualizer_demo.cpp)
add_executable (simple_visualizer simple_visualizer.cpp)
add_executable (pcl_debug pcl_debug.cpp)

target_link_libraries(pcd_write_test ${PCL_LIBRARIES})
target_link_libraries(pcl_visualizer_demo ${PCL_LIBRARIES})
target_link_libraries(simple_visualizer ${PCL_LIBRARIES})